--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,10 +53,22 @@ nav > div {
     border: 1px solid #000;
     float: left;
 }
+h2{
+    font-size: 2.5rem;
+}
+.middle-header {
+    text-align: center;
+}
 .social-icon {
     height: 25px;
     width: 25px;
     margin-right: 15px;
     background-color: black;
     float: left;
+}
+.micro-section-header {
+    font: 1.0rem;
+    color: orange;
+    font-weight: 500;
+    text-align: center;
 }
