--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,7 +54,7 @@ h1 {
     #mobile-menu-icon {
         display: none;
     }
-    /* Welcome styles */
+    /* Welcome desktop styles */
     .welcome-section {
         display: flex;
         height: 350px;
@@ -63,5 +63,18 @@ h1 {
         width: 50%;
         border: 1px solid black;
     }
+    /* About desktop styles */
+    .about-section {
+        display: flex;
+        height: 350px;
+    }
+    .about-section-left-container {
+        width: 40%;
+        border: 1px solid black;
 
+    }
+    .about-section-right-container {
+        width: 60%;
+        border: 1px solid black;
+    }
 }
