--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,7 +36,7 @@ h1 {
 }
 /* Specialty styles */
 .specialty-section {
-    height: 350px;
+    height: 100%;
 }
 .specialty-section > p, .specialty-section > h2 {
     text-align: center;
@@ -56,6 +56,34 @@ figure {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+/* Hours styles */
+.hours-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.call-now-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.hours-food-img {
+    width: 80%;
+}
+/* Testimonials styles */
+.testimonials-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.customer-pfp {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+.customer-header, .customer-job-title, .customer-rating, .customer-quote {
+    text-align: center;
 }
 
 /*** DESKTOP STYLES ***/
@@ -109,6 +137,19 @@ figure {
     figure {
         width: 25%;
         border: 1px solid black;
+    }
+    /* Hours desktop styles */
+    .hours-times-container {
+        display: flex;
+        width: 100%;
+    }
+    .hours-left, .hours-right {
+        width: 50%;
+        text-align: center;
+    }
+    .hours-food-img {
+        max-width: 800px;
+        max-height: auto;
     }
     
 }
