--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,9 @@ header {
 ul {
     display: none;
 }
+#mobile-menu-icon {
+    padding-left: 20px;
+}
 /* Welcome styles */
 .welcome-section {
     padding: 20px 0 40px 0;
@@ -57,6 +60,28 @@ h1 {
     background-color: rgb(240, 142, 53);
     color: white;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+/* About styles */
+.section-title-small {
+    text-align: center;
+    color: rgb(240, 142, 53);
+}
+.section-h2 {
+    padding-left: 20px;
+    font-size: 2.0rem;
+}
+.section-description {
+    padding: 5px 20px;
+    font-size: 1.2rem;
+}
+.btn-container {
+    display: flex;
+    justify-content: center;
+}
+.menu-btn {
+    width: 120px;
+    margin: 20px 0 30px 0;
 }
 
 /* Specialty styles */
