--- a/styles/styles.css
+++ b/styles/styles.css
@@ -87,9 +87,14 @@ h1 {
 /* Specialty styles */
 .specialty-section {
     height: 100%;
+    padding-top: 20px;
 }
-.specialty-section > p, .specialty-section > h2 {
+.specialty-section > p {
     text-align: center;
+}
+.specialty-section > h2 {
+    text-align: center;
+    padding: 0;
 }
 .specialty-image-container {
     display: flex;
@@ -106,6 +111,7 @@ figure {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px;
 }
 /* Hours styles */
 .hours-section {
