--- a/styles/styles.css
+++ b/styles/styles.css
@@ -118,6 +118,7 @@ figure {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 30px 0 0 0;
 }
 .call-now-container, .hours-times.container {
     margin: 20px 0;
@@ -143,6 +144,8 @@ figure {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 500px;
+    margin: 50px 0 0 0;
 }
 .customer-pfp {
     width: 150px;
@@ -151,6 +154,12 @@ figure {
 }
 .customer-header, .customer-job-title, .customer-rating, .customer-quote {
     text-align: center;
+}
+.customer-container {
+    margin: 20px 0 10px 0;
+}
+.testimonial-container {
+    margin: 0 20px;
 }
 
 /*** DESKTOP STYLES ***/
