feat: added background images for welcome and about section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -172,6 +172,7 @@ figure {
     }
     ul {
         display: flex;
+        padding-right: 2%;
     }
     .nav-link {
         padding: 0 0 0 30px;
@@ -186,7 +187,8 @@ figure {
         display: flex;
         height: 550px;
         align-items: center;
-        border: 1px solid black;
+        background-image: url("../assets/fruit.jpg");
+        background-size: 100% 100%;
     }
     .welcome-section-left-container, .welcome-section-right-container {
         width: 50%;
@@ -200,13 +202,14 @@ figure {
         display: flex;
         height: 550px;
         align-items: center;
-        border: 1px solid black;
+        background-image: url("../assets/about-background.jpg");
+        background-size: 100% 100%;
     }
     .about-section-left-container {
         width: 40%;
     }
     .about-section-right-container {
-        width: 60%;
+        width: 50%;
     }
     /* Specialty desktop styles */
     .specialty-image-container {
