--- a/styles/styles.css
+++ b/styles/styles.css
@@ -88,6 +88,7 @@ h1 {
 .specialty-section {
     height: 100%;
     padding-top: 20px;
+    background-color: rgba(243, 246, 247, 1);
 }
 .specialty-section > p {
     text-align: center;
@@ -119,6 +120,9 @@ figure {
     flex-direction: column;
     align-items: center;
     margin: 30px 0 0 0;
+    background-image: url("../assets/cups-bg-img.jpg");
+    background-size: 100% 100%;
+    padding: 40px 0;
 }
 .call-now-container, .hours-times.container {
     margin: 20px 0;
@@ -137,6 +141,7 @@ figure {
 }
 .hours-food-img {
     width: 80%;
+    height: auto;
     margin: 20px 0 0 0;
 }
 /* Testimonials styles */
@@ -145,7 +150,9 @@ figure {
     flex-direction: column;
     align-items: center;
     height: 500px;
-    margin: 50px 0 0 0;
+    padding: 50px 0 0 0;
+    background-image: url("../assets/quote-bg-img.png");
+    background-size: 100% 100%;
 }
 .customer-pfp {
     width: 150px;
@@ -230,9 +237,19 @@ figure {
         width: 50%;
         text-align: center;
     }
-    .hours-food-img {
-        max-width: 800px;
-        max-height: auto;
+    .hours-left {
+        padding-left: 20%;
     }
-    
+    .hours-right {
+        padding-right: 20%;
+    }
+    .hours-food-img {
+        width: 50%;
+        height: auto;
+        margin: 20px 0 0 0;
+    }
+    /* Testimonials desktop styles */
+    .customer-quote {
+        padding: 5px 20%;
+    }
 }
