--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,7 +27,8 @@ ul {
 }
 /* Welcome styles */
 .welcome-section {
-    padding: 20px 0 40px 0;
+    padding: 60px 0 60px 0;
+    background-color: rgba(243, 246, 247, 1)
 }
 h1 {
     font-weight: 700;
@@ -63,6 +64,9 @@ h1 {
 }
 
 /* About styles */
+.about-section {
+    padding: 60px 0 30px 0;
+}
 .section-title-small {
     text-align: center;
     color: rgb(240, 142, 53);
@@ -87,7 +91,7 @@ h1 {
 /* Specialty styles */
 .specialty-section {
     height: 100%;
-    padding-top: 20px;
+    padding: 60px 0 30px 0;
     background-color: rgba(243, 246, 247, 1);
 }
 .specialty-section > p {
@@ -119,10 +123,9 @@ figure {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 30px 0 0 0;
     background-image: url("../assets/cups-bg-img.jpg");
     background-size: 100% 100%;
-    padding: 40px 0;
+    padding: 60px 0 50px 0;
 }
 .call-now-container, .hours-times.container {
     margin: 20px 0;
@@ -150,7 +153,7 @@ figure {
     flex-direction: column;
     align-items: center;
     height: 500px;
-    padding: 50px 0 0 0;
+    padding: 60px 0 30px 0;
     background-image: url("../assets/quote-bg-img.png");
     background-size: 100% 100%;
 }
@@ -219,6 +222,9 @@ figure {
         width: 50%;
     }
     /* Specialty desktop styles */
+    .specialty-section {
+        padding: 50px 0 30px 0;
+    }
     .specialty-image-container {
         display: flex;
         flex-direction: row;
@@ -226,7 +232,6 @@ figure {
     }
     figure {
         width: 25%;
-        border: 1px solid black;
     }
     /* Hours desktop styles */
     .hours-times-container {
